--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,12 +1,24 @@
-html {
-	background-color: #ffe6e6;
-}
+
 
 h3 {
 	/*border: 5px solid black;*/
 	font-family: Arial;
 	padding-left: 60px;
 	
+}
+
+#myHead {
+	font-family: Arial;
+	color:aquamarine;
+}
+
+#appFrame {
+	background-color: rgb(245, 245, 245, .7);
+	width: fit-content;
+	font-family: Arial;
+	border: 5px solid white;
+	padding: 10px;
+	padding-right: 25px;
 }
 
 .form-div {
@@ -27,3 +39,40 @@ h3 {
 	margin-right: auto;
 
 }
+
+
+
+html {
+	background: url("../images/IMG_0049.jpg") no-repeat center fixed;
+	background-size: cover;
+  }
+
+
+/* Add a black background color to the top navigation */
+.topnav {
+	background-color: #333;
+	overflow: hidden;
+	font-family: Arial, Helvetica, sans-serif;
+  }
+  
+  /* Style the links inside the navigation bar */
+  .topnav a {
+	float: left;
+	color: #f2f2f2;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+	font-size: 17px;
+  }
+  
+  /* Change the color of links on hover */
+  .topnav a:hover {
+	background-color: #ddd;
+	color: black;
+  }
+  
+  /* Add a color to the active/current link */
+  .topnav a.active {
+	background-color: #04AA6D;
+	color: white;
+  }
