--- a/styles/styles.css
+++ b/styles/styles.css
@@ -122,11 +122,18 @@ html {
 	color: white;
   }
 
-  table, th, td {
+  th, td {
 	/*
 	border: 1px solid black;
 	*/
 	border-collapse: collapse; 
 	padding: 6px;
+	border-radius: 8px;
 	
+	
+  }
+
+  .unitKg {
+	font-size: small;
+	text-align: left;
   }
